--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <li><a href="#" onclick="showSection('workouts')">Workouts</a></li>
             <li><a href="#" onclick="showSection('nutrition')">Nutrition</a></li>
             <li><a href="#" onclick="showSection('profile')">Profile</a></li>
+            <li><a href="#" onclick="showSection('forum')">Forum</a></li>
         </ul>
     </nav>
     <main class="main-content">
