--- a/index.html
+++ b/index.html
@@ -24,7 +24,44 @@
         <section id="home" class="content-section">
             <h2>Your Fitness Journey Starts Here</h2>
             <p>Discover personalized workouts and nutrition plans to achieve your fitness goals.</p>
-            <a href="#" class="cta-button">Get Started</a>
+            <a href="#" class="cta-button" onclick="showAuthModal()">Get Started</a>
+
+
+<div id="getStartedModal" class="modal">
+    <div class="modal-content">
+        <span class="close" onclick="closeGetStartedModal()">&times;</span>
+        <h2 id="getStartedModalTitle">Get Started</h2>
+        <button onclick="showLogin()">Login</button>
+        <button onclick="showRegister()">Register</button>
+        <div id="loginForm" style="display: none;">
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username">
+            <br>
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password">
+            <br>
+            <button type="button" onclick="submitLoginForm()">Submit Login</button>
+        </div>
+        <div id="registerForm" style="display: none;">
+            <label for="email">Email</label>
+            <input type="text" id="email" name="email">
+            <br>
+            <label for="first-name">First Name:</label>
+            <input type="text" id="first-name" name="first-name">
+            <br>
+            <label for="last-name">Last Name:</label>
+            <input type="text" id="last-name" name="last-name">
+            <br>
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username">
+            <br>
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password">
+            <br>
+            <button type="button" onclick="submitRegistrationForm()">Submit Registration</button>
+        </div>
+    </div>
+</div>
         </section>
         <section id="workouts" class="content-section">
             <h2>Featured Workouts</h2>
