--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header class="header">
+        <img src="./assets/images/logo.jpg" alt="No Limits Logo" class="logo">
         <h1 id="appTitle">No Limits</h1>
     </header>
     <nav class="nav">
