--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
     <footer class="footer">
         <p>&copy; 2023 No Limits. All rights reserved.</p>
     </footer>
-    <script defer src="./public/js/script.js"></script>
+    <script defer src=".public/js/script.js"></script>
+    <script defer src="./public/js/app.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 
 </body>
